--- a/gatb-core/src/gatb/system/api/config.hpp.in
+++ b/gatb-core/src/gatb/system/api/config.hpp.in
@@ -31,11 +31,19 @@
 #define KSIZE_2  ${KSIZE_2}
 #define KSIZE_3  ${KSIZE_3}   
 #define KSIZE_4  ${KSIZE_4}
+#define KSIZE_5  ${KSIZE_5}
+#define KSIZE_6  ${KSIZE_6}
+#define KSIZE_7  ${KSIZE_7}
+#define KSIZE_8  ${KSIZE_8}
 
 #define PREC_1  ((KSIZE_1+31)/32)
 #define PREC_2  ((KSIZE_2+31)/32)
 #define PREC_3  ((KSIZE_3+31)/32)
 #define PREC_4  ((KSIZE_4+31)/32)
+#define PREC_5  ((KSIZE_5+31)/32)
+#define PREC_6  ((KSIZE_6+31)/32)
+#define PREC_7  ((KSIZE_7+31)/32)
+#define PREC_8  ((KSIZE_8+31)/32)
 
 #ifdef GATB_USE_CUSTOM_ALLOCATOR
     #define CUSTOM_MEM_ALLOC  1
