Make management of supported kmer size completly generic

--- a/gatb-core/src/CMakeLists.txt
+++ b/gatb-core/src/CMakeLists.txt
@@ -2,66 +2,72 @@
 #  KMER SIZE DEFINITION 
 ################################################################################
 
-# We define several sizes of kmers
-SET (KSIZE_1  "32")
-SET (KSIZE_2  "64")
-SET (KSIZE_3  "96")
-SET (KSIZE_4 "128")
-SET (KSIZE_5 "160")
-SET (KSIZE_6 "192")
-SET (KSIZE_7 "224")
-SET (KSIZE_8 "256")
+# We define the default values for kmer sizes.
+#list (APPEND KSIZE_DEFAULT_LIST  32   64)
+list (APPEND KSIZE_DEFAULT_LIST  32   64   96  128)
+#list (APPEND KSIZE_DEFAULT_LIST  32   64   96  128  160  192  224  256)
 
-# Users can overwrite these values if needed
-IF (k1)
-    SET (KSIZE_1 ${k1})
-ENDIF()
+# We use a default list of kmer sizes if no one is provided by the user
+if (NOT KSIZE_LIST)
+    set (KSIZE_LIST ${KSIZE_DEFAULT_LIST})
+else()
+    string(REPLACE " " ";" KSIZE_LIST ${KSIZE_LIST})
+endif()
 
-IF (k2)
-    SET (KSIZE_2 ${k2})
-ENDIF()
+# We set all KSIZE_x variables (used in config.in files)
+set (idx 0)
+FOREACH (ksize ${KSIZE_LIST})
+    MATH(EXPR idx "${idx}+1")
+    # We set the default value to KSIZE_i
+    SET (KSIZE_${idx} ${ksize}) 
+ENDFOREACH()
 
-IF (k3)
-    SET (KSIZE_3 ${k3})
-ENDIF()
+set (idx 0)
+FOREACH (ksize ${KSIZE_LIST})
+    list (APPEND KSIZE_STRING_TYPE_TMP "boost::mpl::int_<${ksize}>")
+ENDFOREACH()
 
-IF (k4)
-    SET (KSIZE_4 ${k4})
-ENDIF()
+string (REPLACE ";" "," KSIZE_STRING_COMMA "${KSIZE_LIST}")
+string (REPLACE ";" " " KSIZE_STRING_SPACE "${KSIZE_LIST}")
+string (REPLACE ";" "," KSIZE_STRING_TYPE  "${KSIZE_STRING_TYPE_TMP}")
 
-IF (k5)
-    SET (KSIZE_5 ${k5})
-ENDIF()
+# We dump some information
+MESSAGE ("-- OPTIMIZED KMER SIZES INTERVALS ARE " ${KSIZE_STRING_SPACE} " <-- max supported kmer size without recompilation")
 
-IF (k6)
-    SET (KSIZE_6 ${k6})
-ENDIF()
-
-IF (k7)
-    SET (KSIZE_7 ${k7})
-ENDIF()
-
-IF (k8)
-    SET (KSIZE_8 ${k8})
-ENDIF()
-
-
-
-MESSAGE ("-- OPTIMIZED KMER SIZES INTERVALS ARE ${KSIZE_1} ${KSIZE_2} ${KSIZE_3} ${KSIZE_4} ${KSIZE_5} ${KSIZE_6} ${KSIZE_7} ${KSIZE_8} <-- max supported kmer size without recompilation")
 
 ################################################################################
 #  CONFIGURATION FILE
 ################################################################################
+
+# We build the file holding system information
 configure_file (
     ${PROJECT_SOURCE_DIR}/src/gatb/system/api/config.hpp.in 
     ${PROJECT_BINARY_DIR}/include/gatb/system/api/config.hpp
 )
 
+# We define the list of files that need template specializations for each possible kmer size
+file (GLOB_RECURSE  TemplateFiles  ${PROJECT_SOURCE_DIR}/src/gatb/template/*.cpp.in)
+
+FOREACH (KSIZE ${KSIZE_LIST})
+
+    FOREACH (template ${TemplateFiles})
+
+        get_filename_component (template_out ${template} NAME)
+        
+        configure_file (
+            ${template}
+            ${PROJECT_BINARY_DIR}/src/gatb/template/${template_out}_${KSIZE}.cpp
+        )
+
+    ENDFOREACH ()
+
+ENDFOREACH ()
+
 ################################################################################
 #  LIBRARY GENERATION 
 ################################################################################
 
-file (GLOB_RECURSE  ComponentFiles  *)
+file (GLOB_RECURSE  ComponentFiles  *  ${PROJECT_BINARY_DIR}/src/gatb/*.cpp)
 
 # We add the compilation options for the library
 add_definitions (${gatb-core-flags})
