fixed a misnomer. by the way, i noticed the two existing benchmarks don't compile

--- a/gatb-core/test/benchmark/CMakeLists.txt
+++ b/gatb-core/test/benchmark/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 include_directories (${gatb-core-includes})
 
-list (APPEND PROGRAMS bench1 bench_bloom)
+list (APPEND PROGRAMS bench1 bench_bloom bench_mphf)
 
 FOREACH (program ${PROGRAMS})
   add_executable(${program} ${program}.cpp)
