this is THE big commit for GATB-core of november 2015. changelog is:
- Graph simplifications are moved from Minia to GATB-core. Call them using: graph.simplify()

- New data structure for faster neighborhood queries. Enable it using: graph.precomputeAdjacency()

- As a consequence of optimizations, it is now much faster to call indegree(node), outdegree(node) and
degree(node,size_t &in,size_t &out) rather than neighbors(node, direction).size() if you're only interested
in degrees.

- LargeInt (the type of kmer) constructor has been removed, for speed reasons. Be warned that it might
break existing code that implicitly rely on 0-initialization of kmers, but problems can hopefully be detected using valgrind.

- Graph becomes GraphTemplate<Node,Edge,GraphDataVariant>, and compatibility is preserved via typedefs

- This enables to define GraphFast<span>, a graph object which only holds Node's and Edge's for a single k-mer size,
as opposed to a boost::variant of multiple kmer sizes before. It is faster.

- Graph API has been changed:

neighbors<Node> becomes neighbors,
neighbors<Edge> becomes neighborsEdge,
iterator<Node> becomes iterator,
iterator<BranchingNode> becomes iteratorBranching

- The change above was necessary, because it is difficult to specialize nested templates in C++. Actually, not all templated
graph functions have been un-templated (because some aren't used in conjunction with GraphFast). There is still work to do.

- Due to graph template, the following classes have also been changed to be also templatized: BranchingAlgorithm, all Frontline's, all Terminator's
typedef's have been created to preserve compatibility

- For speed of tools, it is now advised to follow Minia.cpp's functor technique and use GraphFast<span> instead of Graph. However
Graph should still work and offer same performance as before.

- GraphData is moved from Graph.cpp to Graph.hpp

- MPHF index of a node is now cached in the Node object

- because of that, 'const Node&' should now

--- a/gatb-core/CMakeLists.txt
+++ b/gatb-core/CMakeLists.txt
@@ -133,11 +133,50 @@ if (use_new_cxx)
     set (LIBRARY_COMPILE_DEFINITIONS  "${LIBRARY_COMPILE_DEFINITIONS}  -DWITH_LAMBDA_EXPRESSION ${CXX_STD_VERSION}")
 endif()
 
+# detect SSE 
+# from https://github.com/rurban/smhasher/blob/master/CMakeLists.txt
+# i do not see much performance gain for now, but let's keep that code here, might be useful later.
+# list of performance gain observed:
+# popcount in Graph::countNeighbors
+IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
+    EXEC_PROGRAM(cat ARGS "/proc/cpuinfo" OUTPUT_VARIABLE CPUINFO)
+    STRING(REGEX REPLACE "^.*(sse2).*$" "\\1" SSE_THERE ${CPUINFO})
+    STRING(COMPARE EQUAL "sse2" "${SSE_THERE}" SSE2_TRUE)
+    STRING(REGEX REPLACE "^.*(sse4_2).*$" "\\1" SSE_THERE ${CPUINFO})
+    STRING(COMPARE EQUAL "sse4_2" "${SSE_THERE}" SSE42_TRUE)
+ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Darwin")
+    EXEC_PROGRAM("/usr/sbin/sysctl -n machdep.cpu.features" OUTPUT_VARIABLE
+        CPUINFO)
+    STRING(REGEX REPLACE "^.*[^S](SSE2).*$" "\\1" SSE_THERE ${CPUINFO})
+    STRING(COMPARE EQUAL "SSE2" "${SSE_THERE}" SSE2_TRUE)
+    STRING(REGEX REPLACE "^.*(SSE4.2).*$" "\\1" SSE_THERE ${CPUINFO})
+    STRING(COMPARE EQUAL "SSE4.2" "${SSE_THERE}" SSE42_TRUE)
+ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
+IF (SSE2_TRUE)
+    set(SSE2_FOUND true CACHE BOOL "SSE2 available")
+ELSE (SSE2_TRUE)
+    set(SSE2_FOUND false CACHE BOOL "SSE2 not available")
+ENDIF (SSE2_TRUE)
+IF (SSE42_TRUE)
+    set(SSE4_2_FOUND true CACHE BOOL "SSE4.2 available")
+ELSE (SSE42_TRUE)
+    set(SSE4_2_FOUND false CACHE BOOL "SSE4.2 not available")
+ENDIF (SSE42_TRUE)
+# I could use LIBRARY_COMPILE_DEFINITIONS, but it's actually passed to "add_definitions", which isn't made for passing compilation flags, only -D ones.
+IF(SSE4_2_FOUND)
+    set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -msse2 -msse4.2 -mpopcnt")
+    set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -msse2 -msse4.2 -mpopcnt")
+    message ("-- SSE 4.2 detected")
+ENDIF()
+
 if (use_mphf)
     set (LIBRARY_COMPILE_DEFINITIONS  "${LIBRARY_COMPILE_DEFINITIONS}    -DWITH_MPHF ")
         message ("-------------------------------------------------------------------------------------")
         message ("-- WILL COMPILE MPHF! (COMPILER VERSION IS HIGH ENOUGH) ")
         message ("-------------------------------------------------------------------------------------")
+    if (SSE4_2_FOUND)
+        set (LIBRARY_COMPILE_DEFINITIONS  "${LIBRARY_COMPILE_DEFINITIONS}    -DEMPHF_USE_POPCOUNT")
+    endif()
 endif()
 
 # We also set a flag for TR1 management
