--- a/gatb-core/test/benchmark/CMakeLists.txt
+++ b/gatb-core/test/benchmark/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories (${gatb-core-includes})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11") # needed for bench_mphf
 
 
-list (APPEND PROGRAMS bench1 bench_bloom bench_mphf bench_minim)
+list (APPEND PROGRAMS bench1 bench_bloom bench_mphf bench_minim bench_graph)
 
 FOREACH (program ${PROGRAMS})
   add_executable(${program} ${program}.cpp)
