--- a/gatb-core/src/gatb/template/TemplateSpecialization5.cpp.in
+++ b/gatb-core/src/gatb/template/TemplateSpecialization5.cpp.in
@@ -11,6 +11,10 @@ namespace gatb { namespace core { namespace debruijn { namespace impl  {
 /********************************************************************************/
 
 template class BranchingAlgorithm   <${KSIZE}, Node, Edge, GraphDataVariant>;
+
+typedef boost::variant<GraphData<${KSIZE}>> GraphDataVariantT;
+template class BranchingAlgorithm <${KSIZE},Node_t<Kmer<${KSIZE}>::Type>,Edge_t<Node_t<Kmer<${KSIZE}>::Type >>, GraphDataVariantT>;
+
 template class IterativeExtensions  <${KSIZE}>;
 
 /********************************************************************************/
