got rid of old template specializations for Graph -- API changed a bit. getting rid of Instantiations.hpp/cpp

--- a/gatb-core/src/gatb/template/TemplateSpecialization5.cpp.in
+++ b/gatb-core/src/gatb/template/TemplateSpecialization5.cpp.in
@@ -4,13 +4,16 @@
 
 #include <gatb/debruijn/impl/BranchingAlgorithm.cpp>
 #include <gatb/debruijn/impl/IterativeExtensions.cpp>
-#include <gatb/debruijn/impl/Instantiations.cpp>
 
 /********************************************************************************/
 namespace gatb { namespace core { namespace debruijn { namespace impl  {
 /********************************************************************************/
 
 template class BranchingAlgorithm   <${KSIZE}, Node, Edge, GraphDataVariant>;
+
+typedef boost::variant<GraphData<${KSIZE}>> GraphDataVariantT;
+template class BranchingAlgorithm <${KSIZE},Node_t<Kmer<${KSIZE}>::Type>,Edge_t<Node_t<Kmer<${KSIZE}>::Type >>, GraphDataVariantT>;
+
 template class IterativeExtensions  <${KSIZE}>;
 
 /********************************************************************************/
