added a NO_SSE flag for centos5 releases

--- a/gatb-core/CMakeLists.txt
+++ b/gatb-core/CMakeLists.txt
@@ -163,7 +163,7 @@ ELSE (SSE42_TRUE)
     set(SSE4_2_FOUND false CACHE BOOL "SSE4.2 not available")
 ENDIF (SSE42_TRUE)
 # I could use LIBRARY_COMPILE_DEFINITIONS, but it's actually passed to "add_definitions", which isn't made for passing compilation flags, only -D ones.
-IF(SSE4_2_FOUND)
+IF(SSE4_2_FOUND AND (NOT NO_SSE))
     set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -msse2 -msse4.2 -mpopcnt")
     set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -msse2 -msse4.2 -mpopcnt")
     message ("-- SSE 4.2 detected")
