switching to HEM mode of mphf for faster construction; still takes quite a bit of construction memory though; also, slightly longer query times. could be solved by switching to compute_mphf_seq but i wanted to try with superspeedy construction.

--- a/gatb-core/CMakeLists.txt
+++ b/gatb-core/CMakeLists.txt
@@ -175,7 +175,7 @@ if (use_mphf)
         message ("-- WILL COMPILE MPHF! (COMPILER VERSION IS HIGH ENOUGH) ")
         message ("-------------------------------------------------------------------------------------")
     if (SSE4_2_FOUND)
-        set (LIBRARY_COMPILE_DEFINITIONS  "${LIBRARY_COMPILE_DEFINITIONS}    -DEMPHF_USE_POPCOUNT")
+        set (LIBRARY_COMPILE_DEFINITIONS  "${LIBRARY_COMPILE_DEFINITIONS}    -DEMPHF_USE_POPCOUNT=1")
     endif()
 endif()
 
