--- a/gatb-core/doc/CMakeLists.txt
+++ b/gatb-core/doc/CMakeLists.txt
@@ -7,7 +7,15 @@ if (DOXYGEN_FOUND)
 
     CONFIGURE_FILE (${CMAKE_CURRENT_SOURCE_DIR}/doxygen/gatb.doxyfile  ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile  @ONLY)
     
-    ADD_CUSTOM_TARGET (doc ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
+    ADD_CUSTOM_TARGET (doc 
+      ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+    )
+    ADD_CUSTOM_TARGET (deploy-doc 
+      COMMAND tar -zcf ${CMAKE_BINARY_DIR}/doc/doc.tgz -C ${CMAKE_BINARY_DIR}/doc/html .
+      COMMAND scp ${CMAKE_BINARY_DIR}/doc/doc.tgz $ENV{USER}@scm.gforge.inria.fr:/home/groups/gatb-core/
+      COMMAND ssh $ENV{USER}@scm.gforge.inria.fr "rm -rf /home/groups/gatb-core/htdocs/*"
+      COMMAND ssh $ENV{USER}@scm.gforge.inria.fr "tar -xf /home/groups/gatb-core/doc.tgz --no-overwrite-dir -C /home/groups/gatb-core/htdocs"
+    )
     
     INSTALL (CODE "execute_process(COMMAND ${CMAKE_BUILD_TOOL} doc)")
     
@@ -17,4 +25,4 @@ endif (DOXYGEN_FOUND)
 
 
 # HERE IS A COMMAND LINE TO COPY THE HTML DOCUMENTATION TO THE GFORGE SERVER  (from the build directory)
-#    scp doc/html/* edrezen@scm.gforge.inria.fr:/home/groups/gatb-core/htdocs/
+#    
