fixing some oopsies

--- a/gatb-core/CMakeLists.txt
+++ b/gatb-core/CMakeLists.txt
@@ -120,6 +120,7 @@ else()
 endif()
 
 if (INT128_FOUND)
+     set (LIBRARY_COMPILE_DEFINITIONS  "${LIBRARY_COMPILE_DEFINITIONS}  -DINT128_FOUND")
 endif()
 
 if (NONCANONICAL)
