--- a/gatb-core/CMakeLists.txt
+++ b/gatb-core/CMakeLists.txt
@@ -333,6 +333,7 @@ ENDIF()
 
 IF (NOT DEFINED GATB_CORE_INSTALL_EXCLUDE)
     INSTALL (FILES ${PROJECT_SOURCE_DIR}/doc/misc/README.txt  DESTINATION . OPTIONAL)
+    INSTALL (DIRECTORY ${PROJECT_SOURCE_DIR}/thirdparty/boost DESTINATION ./include)
 ENDIF()
 
 IF (NOT DEFINED GATB_CORE_EXCLUDE_EXAMPLES)
@@ -358,6 +359,8 @@ SET (CPACK_SOURCE_IGNORE_FILES
     "^${PROJECT_SOURCE_DIR}/doc/design"
     "^${PROJECT_SOURCE_DIR}/DELIVERY.md"
 )
+
+
 
 IF (NOT DEFINED GATB_CORE_INSTALL_EXCLUDE)
     # We include the module and get all the delivery targets
